Change filter option drop-down to orange (and fix content shift on focus due to border)

--- a/source/assets/stylesheets/_modules.scss
+++ b/source/assets/stylesheets/_modules.scss
@@ -431,9 +431,11 @@ module-filter {
     margin: 0;
     padding: 5px 10px;
     text-transform: uppercase;
+    border: 1px solid $chef-white;
 
     &:after {
       content: "\25bc";
+      color: $primary-orange;
       display: inline-block;
       line-height: 1;
       width: 22px;
@@ -441,7 +443,7 @@ module-filter {
     }
 
     &:focus {
-      border: 1px solid $light-gray-bg;
+      border-color: $light-gray-bg;
       border-bottom: 0;
       outline: 0;
 
